--- a/PARTagPicker/Classes/PARTagPickerViewController.xib
+++ b/PARTagPicker/Classes/PARTagPickerViewController.xib
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
     <objects>
@@ -14,7 +15,7 @@
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
+        <view clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
             <rect key="frame" x="0.0" y="0.0" width="320" height="39"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -58,6 +59,7 @@
                 <constraint firstAttribute="bottom" secondItem="F5J-vl-Z6E" secondAttribute="bottom" id="3Ut-dO-s07"/>
                 <constraint firstItem="F5J-vl-Z6E" firstAttribute="leading" secondItem="0nj-WZ-ytQ" secondAttribute="leading" id="5XA-zR-eeh"/>
                 <constraint firstAttribute="trailing" secondItem="0nj-WZ-ytQ" secondAttribute="trailing" id="6wE-5U-ggx"/>
+                <constraint firstAttribute="bottom" secondItem="F5J-vl-Z6E" secondAttribute="bottom" id="ErK-9c-8Gi"/>
                 <constraint firstItem="0nj-WZ-ytQ" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="HfZ-pg-ftU"/>
                 <constraint firstItem="0nj-WZ-ytQ" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="Lv5-xt-ZmK"/>
                 <constraint firstAttribute="bottom" secondItem="F5J-vl-Z6E" secondAttribute="bottom" id="cLw-I2-ITN"/>
@@ -69,6 +71,7 @@
             <variation key="default">
                 <mask key="constraints">
                     <exclude reference="3Ut-dO-s07"/>
+                    <exclude reference="ErK-9c-8Gi"/>
                     <exclude reference="cLw-I2-ITN"/>
                     <exclude reference="uJW-c7-jOt"/>
                 </mask>
