--- a/PARTagPicker/ViewController.xib
+++ b/PARTagPicker/ViewController.xib
@@ -1,8 +1,12 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11542" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ViewController">
@@ -12,48 +16,55 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NX5-xi-CxW">
-                    <rect key="frame" x="255" y="285" width="89" height="30"/>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NX5-xi-CxW">
+                    <rect key="frame" x="142.5" y="318.5" width="90" height="30"/>
                     <state key="normal" title="Hide All Tags">
-                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </state>
                     <connections>
                         <action selector="hideAllTags:" destination="-1" eventType="touchUpInside" id="XYX-bs-HSw"/>
                     </connections>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rFt-4m-Gtp">
-                    <rect key="frame" x="216" y="323" width="168" height="30"/>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rFt-4m-Gtp">
+                    <rect key="frame" x="104" y="356.5" width="167" height="30"/>
                     <state key="normal" title="Show Chosen Tags Only">
-                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </state>
                     <connections>
                         <action selector="showChosenTagsOnly:" destination="-1" eventType="touchUpInside" id="amt-30-Kjw"/>
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="G0u-nI-QOF">
-                    <rect key="frame" x="252" y="247" width="96" height="30"/>
+                    <rect key="frame" x="139.5" y="280.5" width="96" height="30"/>
                     <state key="normal" title="Show All Tags">
-                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </state>
                     <connections>
                         <action selector="showAllTags:" destination="-1" eventType="touchUpInside" id="ukf-JI-Xxk"/>
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EqL-Sp-xD2">
-                    <rect key="frame" x="275" y="361" width="49" height="30"/>
-                    <state key="normal" title="Add All"/>
+                    <rect key="frame" x="144.5" y="394.5" width="86" height="30"/>
+                    <state key="normal" title="Add All Tags"/>
                     <connections>
                         <action selector="addAll:" destination="-1" eventType="touchUpInside" id="BpP-4K-3BA"/>
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="S9A-aV-qQP">
-                    <rect key="frame" x="271.5" y="399" width="57" height="30"/>
-                    <state key="normal" title="Clear All"/>
+                    <rect key="frame" x="140.5" y="432.5" width="94" height="30"/>
+                    <state key="normal" title="Clear All Tags"/>
                     <connections>
                         <action selector="clearAll:" destination="-1" eventType="touchUpInside" id="7PB-ru-o2e"/>
+                    </connections>
+                </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bNE-a3-jbi">
+                    <rect key="frame" x="167.5" y="470" width="39" height="30"/>
+                    <state key="normal" title="Reset"/>
+                    <connections>
+                        <action selector="setRandom:" destination="-1" eventType="touchUpInside" id="o2D-Fv-cmW"/>
                     </connections>
                 </button>
             </subviews>
@@ -65,10 +76,12 @@
                 <constraint firstItem="S9A-aV-qQP" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="9Ep-Ac-FMm"/>
                 <constraint firstItem="EqL-Sp-xD2" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="Ftl-yJ-ugn"/>
                 <constraint firstAttribute="centerY" secondItem="NX5-xi-CxW" secondAttribute="centerY" id="LoW-Ed-EAC"/>
+                <constraint firstItem="bNE-a3-jbi" firstAttribute="top" secondItem="S9A-aV-qQP" secondAttribute="bottom" constant="7.5" id="OXW-Ba-cfI"/>
                 <constraint firstItem="S9A-aV-qQP" firstAttribute="top" secondItem="EqL-Sp-xD2" secondAttribute="bottom" constant="8" id="PnX-AP-c6x"/>
                 <constraint firstItem="NX5-xi-CxW" firstAttribute="top" secondItem="G0u-nI-QOF" secondAttribute="bottom" constant="8" id="hg2-Lo-3Ge"/>
                 <constraint firstAttribute="centerX" secondItem="NX5-xi-CxW" secondAttribute="centerX" id="rZt-TJ-d4t"/>
                 <constraint firstItem="rFt-4m-Gtp" firstAttribute="top" secondItem="NX5-xi-CxW" secondAttribute="bottom" constant="8" id="saI-6Q-kwH"/>
+                <constraint firstItem="bNE-a3-jbi" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="wEh-hP-uXi"/>
             </constraints>
         </view>
     </objects>
